gộp thêm ttcn + nhận xét + thống kê